[package]
name = "mcp-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp      = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio     = { version = "1", features = ["full"] }
sysinfo   = "0.32"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
schemars  = "0.8"
anyhow    = "1.0"